<resources>
    <string name="app_name">FindMe</string>
    <string name="about_title">About FindMe</string>
    <string name="about_summary">FindMe allows anyone to locate their phone remotely via SMS. FindMe retrieves the phone\'s GPS coordinates and replies with those coordinates to whomever requests for them. Coordinate requests is done by sending in an SMS with the specified keyword.</string>
    <string name="keyword_title">Keyword</string>
    <string name="keyword_summary">A request for the phone\'s GPS coordinates is only triggered if the incoming SMS contains this keyword. It should therefore be something unique e.g 5716, wr23dv</string>
    <string name="gps_timeout_title">GPS timeout</string>
    <string name="gps_timeout_summary">GPS timeout is the maximum time in seconds FindMe will wait for GPS coordinates after which it wil default to coordinates supplied by the mobile network.</string>
    <string name="ignore_case_title">Ignore case</string>
    <string name="ignore_case_summary">When checking if SMS contents contains keyword, ignore case differences</string>
    <string name="request_permissions_message">FindMe requires persmissions to read SMS, send SMS and location in order to serve you well. Please grant these permissions to ensure the app funcions as expected. Do you want to grant these permissions?</string>
    <string name="request_permissions_title">Request Needed Permissions</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
</resources>
