<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="pref_about_key"
        android:summary="@string/about_summary"
        android:title="@string/about_title" />
    <EditTextPreference
        android:key="locate_keyword"
        android:title="@string/keyword_title"
        android:summary="@string/keyword_summary"
        android:dialogTitle="@string/keyword_title"
        android:dialogMessage="@string/keyword_summary"
        android:defaultValue="findme"/>
    <ListPreference
        android:title="@string/gps_timeout_title"
        android:summary="@string/gps_timeout_summary"
        android:dialogTitle="@string/gps_timeout_title"
        android:entries="@array/gps_timeout_entries_labels"
        android:entryValues="@array/gps_timeout_entries_values"
        android:defaultValue="60"/>
</PreferenceScreen>